<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/profile_pic_width"
        android:layout_height="@dimen/profile_pic_width"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_top_profile_pic"
        android:contentDescription="@string/profile_picture"/>

    <EditText
        android:id="@+id/github_profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        android:layout_margin="@dimen/margin_account_button"
        android:hint="@string/github_username"
        android:inputType="text"/>

    <Button
        android:id="@+id/get_data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/github_profile_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_account_button"
        android:text="@string/get_data"
        style="@style/AccountButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>
